crates/mehen-cli/tests/snapshots/pr_comment_golden__regression_broken_links.snap
---
source: tests/pr_comment_golden.rs
expression: redacted
---
<!-- mehen-metrics -->
## [Mehen](https://github.com/ophidiarium/mehen) Summary (`HEAD~1`..`HEAD`)

No metric changes detected.

<!-- mehen-docs -->
## 📝 Documentation Metrics (this PR vs `HEAD~1`)

| File | DMI | Words | FKGL | Link Debt | Filler Risk |
|---|---:|---:|---:|---:|---:|
| `docs/api/auth.md` | 85 (HEAD~1: 90) 🔴 | 194 (HEAD~1: 38) ⚪ | 13.7 (HEAD~1: 0.0) 🔴 | 0.45 (HEAD~1: 0.00) 🔴 | 0.67 (HEAD~1: 0.67) ⚠️ |

**Callouts**

- 🔴 **docs/api/auth.md** — 2 unresolved relative link(s) added: `../../guide/sessions.md` (L7), `./tokens.md#refresh` (L7)
- 🔴 **docs/api/auth.md** — DMI 90 → 85, crossed Excellent → Good (§10.4)
- ⚠️ **docs/api/auth.md** — filler/lazy risk 0.67 (HIGH); top contributors: large-unanchored-prose 1.00, low-artifact-density 1.00, low-repository-grounding 1.00
- 🔴 **docs/api/auth.md** — 4 sentence(s) exceed 30 words (new): L0, L0, L0, L0

<details>
<summary>Full metric breakdown (structural · wording · lexical · readability)</summary>

### Structural / review

| File | RCI | MCC | MRPC | Evidence | Grounding |
|---|---:|---:|---:|---:|---:|
| `docs/api/auth.md` | 4 (HEAD~1: 0) ⚪ | 1 (HEAD~1: 0) ⚪ | 1 ⚪ | 0.00 ⚪ | 0.00 ⚪ |

### English wording quality

| File | WQS | Passive % | Hedges /100w | Long sent. | Nominalizations |
|---|---:|---:|---:|---:|---:|
| `docs/api/auth.md` | 0.92 (HEAD~1: 0.99) 🟢 | 11% (HEAD~1: 0%) 🔴 | 0.0 ⚪ | 4 (HEAD~1: 0) ⚪ | 6% (HEAD~1: 10%) 🟢 |

### English lexical & readability ensemble

| File | MATTR₅₀ | Hapax | Fog | SMOG | ARI | Coleman-Liau |
|---|---:|---:|---:|---:|---:|---:|
| `docs/api/auth.md` | 0.82 (HEAD~1: 0.78) 🔴 | 0.81 (HEAD~1: 0.78) 🔴 | 14.3 (HEAD~1: 0.0) 🔴 | — | 15.2 (HEAD~1: 0.0) 🔴 | 14.6 (HEAD~1: 0.0) 🔴 |

### Filler risk contributors (files with risk > 0.40)

- **`docs/api/auth.md` (0.67)** — large-unanchored-prose 1.00, low-artifact-density 1.00, low-repository-grounding 1.00

</details>

> Legend: 🟢 improvement · 🔴 regression · ⚠️ attention · 🆕 new file · ⚪ no material change

> Generated by [mehen](https://github.com/ophidiarium/mehen) — the code quality watcher.
